@@ -417,6 +417,7 @@ page.label.dataType                           = Data Type
 page.label.databaseProtocol                   = Database Protocol
 page.label.databaseType                       = Database Type
 page.label.dateFormat                         = Date Format
+page.label.dateTimeFormat                     = DateTime Format
 page.label.defaultReportGroup                 = Default Report Group
 page.label.filePath                           = File Path
 page.label.id                                 = ID
