@@ -417,6 +417,7 @@ page.label.dataType                           = Aina ya data
 page.label.databaseProtocol                   = Itifaki hifadhidata
 page.label.databaseType                       = Aina ya Hifadhidata
 page.label.dateFormat                         = Fomati ya tarehe
+page.label.dateTimeFormat                     = Fomati ya tarehe-saa
 page.label.defaultReportGroup                 = Kikundi-Ripoti msingi
 page.label.filePath                           = Njia ya faili
 page.label.id                                 = Kitambulishi
